--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -32,6 +32,7 @@ $font-path: "../assets/fonts";
 }
 .myid {
   padding-left: 14px;
+  font-size: 2rem;
   margin-top: 0;
   text-align: center;
   color: #4f907b !important;
